k8files/taiga-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: taiga-db
  name: taiga-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: taiga-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/taiga: "true"
        io.kompose.service: taiga-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: taiga
            - name: POSTGRES_PASSWORD
              value: taiga
            - name: POSTGRES_USER
              value: taiga
          image: postgres:12.3
          name: taiga-db
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: taiga-db-data
      restartPolicy: Always
      volumes:
        - name: taiga-db-data
          persistentVolumeClaim:
            claimName: taiga-db-data
status: {}
