k8files/taiga-events-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: taiga-events
  name: taiga-events
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: taiga-events
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/taiga: "true"
        io.kompose.service: taiga-events
    spec:
      containers:
        - env:
            - name: RABBITMQ_PASS
              value: taiga
            - name: RABBITMQ_USER
              value: taiga
            - name: TAIGA_SECRET_KEY
              value: taiga-back-secret-key
          image: gcr.io/hybrid-bastion-308816/taiga-events
          name: taiga-events
          ports:
            - containerPort: 8888
          resources: {}
      restartPolicy: Always
status: {}
