k8files/taiga-front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: taiga-front
  name: taiga-front
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: taiga-front
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/taiga: "true"
        io.kompose.service: taiga-front
    spec:
      containers:
        - env:
            - name: TAIGA_URL
              value: http://localhost:9009
            - name: TAIGA_WEBSOCKETS_URL
              value: ws://localhost:9009
          image: taigaio/taiga-front:latest
          name: taiga-front
          resources: {}
      restartPolicy: Always
status: {}
