k8files/taiga-protected-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: taiga-protected
  name: taiga-protected
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: taiga-protected
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/taiga: "true"
        io.kompose.service: taiga-protected
    spec:
      containers:
        - env:
            - name: MAX_AGE
              value: "360"
            - name: SECRET_KEY
              value: taiga-back-secret-key
          image: gcr.io/hybrid-bastion-308816/taiga-protected
          name: taiga-protected
          ports:
            - containerPort: 8003
          resources: {}
      restartPolicy: Always
status: {}
