k8files/taiga-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: taiga-gateway
  name: taiga-gateway
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 80
  selector:
    io.kompose.service: taiga-gateway
status:
  loadBalancer: {}
