k8files/taiga-protected-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: taiga-protected
  name: taiga-protected
spec:
  ports:
    - name: "8003"
      port: 8003
      targetPort: 8003
  selector:
    io.kompose.service: taiga-protected
status:
  loadBalancer: {}
