k8files/taiga-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: taiga
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/taiga: "true"
  podSelector:
    matchLabels:
      io.kompose.network/taiga: "true"
